--- a/represent.ipynb
+++ b/represent.ipynb
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "742bf6cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\chris\\OneDrive\\Documents\\Magang\\Extracted-Model\\.venv\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import numpy as np\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b50a38f6",
    "metadata": {},
    "outputs": [
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6a7561f3",
    "metadata": {},
    "outputs": [
@@ -93,11 +102,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "📷 Memproses: IMG_2042.jpg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.34.jpeg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.37.jpeg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.47.jpeg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.48.jpeg\n",
-      "✅ Embeddings disimpan di embeddings.json\n"
+      "✅ Embeddings disimpan di embedding/embeddings.json\n"
      ]
     }
    ],
@@ -198,7 +208,7 @@
     "# =========================\n",
     "if __name__ == \"__main__\":\n",
     "    input_folder = \"images\"  # ganti dengan path folder kamu\n",
-    "    output_json = \"embeddings.json\"\n",
+    "    output_json = \"embedding/embeddings.json\"\n",
     "    embeddings_dict = {}\n",
     "\n",
     "    for filename in os.listdir(input_folder):\n",
