feat: batch processing for retinaface

--- a/batch_processing.ipynb
+++ b/batch_processing.ipynb
@@ -34,7 +34,7 @@
     "# Facenet512\n",
     "from facenetlib.Facenet_standalone import InceptionResNetV1\n",
     "# RetinaFace\n",
-    "from retina import detect_faces, create_retinaface_model\n",
+    "from retina import detect_faces, create_retinaface_model, detect_faces_batch\n",
     "# Preprocessing utils\n",
     "from facenetlib import preprocessing, image_utils"
    ]
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3c8fd81c",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,8 @@
     "        detections = detect_faces(\n",
     "            img_path=img_bgr,\n",
     "            threshold=threshold,\n",
-    "            model=detector\n",
+    "            model=detector,\n",
+    "            # target_size=(1820,1024)\n",
     "        )\n",
     "\n",
     "        # Pastikan format list of dict\n",
@@ -164,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c4d42af9",
+   "execution_count": null,
+   "id": "1a0a677b",
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +185,126 @@
     "if __name__ == \"__main__\":\n",
     "    input_folder = \"images\"\n",
     "    output_json = \"embedding/embeddings_batch.json\"\n",
+    "\n",
+    "    img_files = [\n",
+    "        os.path.join(input_folder, f)\n",
+    "        for f in os.listdir(input_folder)\n",
+    "        if f.lower().endswith((\".jpg\", \".jpeg\", \".png\"))\n",
+    "    ]\n",
+    "\n",
+    "    results = batch_represent(img_files)\n",
+    "\n",
+    "    with open(output_json, \"w\") as f:\n",
+    "        json.dump(results, f, indent=2)\n",
+    "\n",
+    "    print(f\"✅ Batch embeddings saved to {output_json}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fb5ce064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batch_represent(\n",
+    "    img_paths: List[str],\n",
+    "    threshold: float = 0.9,\n",
+    "    normalization: str = \"base\"\n",
+    ") -> Dict[str, List[Dict[str, Any]]]:\n",
+    "    \"\"\"\n",
+    "    Deteksi semua wajah dari setiap gambar, proses embedding dalam batch,\n",
+    "    dan return hasil per file.\n",
+    "    \"\"\"\n",
+    "    all_faces = []   # semua crop wajah (siap masuk model embedding)\n",
+    "    meta = []        # mapping embedding -> filename + info wajah\n",
+    "\n",
+    "    # 1. Baca semua gambar\n",
+    "    imgs_rgb = []\n",
+    "    imgs_bgr = []\n",
+    "    for p in img_paths:\n",
+    "        img_rgb, _ = image_utils.load_image(p)\n",
+    "        imgs_rgb.append(img_rgb)\n",
+    "        imgs_bgr.append(img_rgb[:, :, ::-1])  # BGR untuk detektor\n",
+    "\n",
+    "    # 2. Deteksi semua wajah sekali jalan\n",
+    "    all_detections = detect_faces_batch(\n",
+    "        imgs_bgr, \n",
+    "        threshold=threshold, \n",
+    "        model=detector\n",
+    "    )\n",
+    "\n",
+    "    # 3. Loop hasil deteksi untuk crop wajah\n",
+    "    for img_path, img_rgb, detections in zip(img_paths, imgs_rgb, all_detections):\n",
+    "        for det in detections.values():\n",
+    "            coords = det[\"facial_area\"]\n",
+    "            if isinstance(coords, list):\n",
+    "                x1, y1, x2, y2 = coords\n",
+    "            else:  # dict\n",
+    "                x1, y1 = coords[\"x\"], coords[\"y\"]\n",
+    "                x2, y2 = x1 + coords[\"w\"], y1 + coords[\"h\"]\n",
+    "\n",
+    "            face_conf = det.get(\"confidence\", det.get(\"score\", 0.0))\n",
+    "            crop = img_rgb[int(y1):int(y2), int(x1):int(x2)]\n",
+    "\n",
+    "            # Resize & normalize\n",
+    "            crop_resized = preprocessing.resize_image(crop, target_size=(160, 160))\n",
+    "            crop_norm = preprocessing.normalize_input(crop_resized, normalization=normalization)\n",
+    "\n",
+    "            if crop_norm.ndim == 4 and crop_norm.shape[0] == 1:\n",
+    "                crop_norm = crop_norm[0]\n",
+    "\n",
+    "            all_faces.append(crop_norm)\n",
+    "            meta.append({\n",
+    "                \"filename\": os.path.basename(img_path),\n",
+    "                \"facial_area\": {\n",
+    "                    \"x\": int(x1), \"y\": int(y1),\n",
+    "                    \"w\": int(x2 - x1), \"h\": int(y2 - y1)\n",
+    "                },\n",
+    "                \"confidence\": float(face_conf)\n",
+    "            })\n",
+    "\n",
+    "    if not all_faces:\n",
+    "        return {}\n",
+    "\n",
+    "    # 4. Convert ke batch array\n",
+    "    batch_faces = np.array(all_faces)\n",
+    "    print(f\"[INFO] Processing {len(batch_faces)} faces in batch...\")\n",
+    "\n",
+    "    # 5. Sekali forward pass ke embedder\n",
+    "    embeddings = embedder.predict(batch_faces, verbose=0)\n",
+    "\n",
+    "    # 6. Kelompokkan hasil per file\n",
+    "    results_by_file = {}\n",
+    "    for m, emb in zip(meta, embeddings):\n",
+    "        m[\"embedding\"] = emb.astype(float).tolist()\n",
+    "        results_by_file.setdefault(m[\"filename\"], []).append(m)\n",
+    "\n",
+    "    return results_by_file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "976ab339",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Processing 9 faces in batch...\n",
+      "✅ Batch embeddings saved to embedding/embeddings_batchssss.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =========================\n",
+    "# Contoh penggunaan\n",
+    "# =========================\n",
+    "if __name__ == \"__main__\":\n",
+    "    input_folder = \"images\"\n",
+    "    output_json = \"embedding/embeddings_batchssss.json\"\n",
     "\n",
     "    img_files = [\n",
     "        os.path.join(input_folder, f)\n",
