fix: use only embedding batching

--- a/represent.ipynb
+++ b/represent.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "742bf6cf",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
     "from facenetlib.Facenet_standalone import InceptionResNetV1\n",
     "\n",
     "# Import RetinaFace detector\n",
-    "from retina import detect_faces, create_retinaface_model\n",
+    "from retinafacelib.retina import detect_faces, create_retinaface_model\n",
     "\n",
     "# Import preprocessing utils DeepFace\n",
     "from facenetlib import preprocessing, image_utils"
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a7561f3",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.37.jpeg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.47.jpeg\n",
       "📷 Memproses: WhatsApp Image 2025-07-30 at 16.57.48.jpeg\n",
-      "✅ Embeddings disimpan di embedding/embeddings.json\n"
+      "✅ Embeddings disimpan di embedding/embeddingsd.json\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
     "# =========================\n",
     "if __name__ == \"__main__\":\n",
     "    input_folder = \"images\"  # ganti dengan path folder kamu\n",
-    "    output_json = \"embedding/embeddings.json\"\n",
+    "    output_json = \"embedding/embeddingsd.json\"\n",
     "    embeddings_dict = {}\n",
     "\n",
     "    for filename in os.listdir(input_folder):\n",
